--- a/popup.html
+++ b/popup.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="style.css">
-  <script defer src="popup.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="popup.js"></script>
 </head>
 <body>
-  <h2>Streamer Consolidator</h2>
-  <button id="loginTwitch">Login with Twitch</button>
-  <button id="loginYouTube">Login with YouTube</button>
-  <div id="streamers">No data loaded yet.</div>
+    <h2>Livestream Lurker</h2>
+    <button id="twitchLogin">Login with Twitch</button>
+    <button id="youtubeLogin">Login with YouTube</button>
+    <div id="streamers">No data loaded yet.</div>
+    <script src="popup.js"></script>
 </body>
 </html>
