Made a million UX/UI changes

--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <script defer src="popup.js"></script>
 </head>
@@ -18,6 +19,7 @@
         </div>
         <div class="search-container">
             <input type="text" id="searchbar" placeholder="Search streamers..." />
+            <button id="clearQuery" class="clear-btn">×</button>
         </div>
     <div id="streamers">No data loaded yet.</div>
 </body>
