Start work on settings page and feedback page for future use

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="popup.css">
     <script defer src="popup.js"></script>
 </head>
 <body>
